# Projet-E4-EEG-cap

./: csv_writer.hpp
DDEtruc/: CMakeLists.txt
DDEtruc/eemagine/sdk/: ._amplifier.h  version.h
DDEtruc/src/: main.cpp
